<resources>
    <string name="app_name">Mis Notas</string>
    <string name="title_activity_ver_nota">ver_nota</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Email">Email</string>
    <string name="EmailNuevo">Email Nuevo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="ContraseñaNueva">Contraseña nueva</string>
    <string name="Nombres">Nombres</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Incio_Sesion">Iniciar Sesion</string>
    <string name="Registro">Registro</string>
    <string name="Login">Login</string>
    <string name="Actualizar">Actualizar</string>>


</resources>