<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/App"
    android:orientation="vertical"
    tools:context=".RegistroActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Registro"
        android:textSize="@dimen/TextSize"
        android:translationY="150dp" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/EditText_Height"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:translationY="150dp" />

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/EditText_Height"
        android:ems="10"
        android:hint="@string/Contraseña"
        android:inputType="textPassword"
        android:translationY="150dp" />

    <EditText
        android:id="@+id/edt_nombres"
        android:layout_width="match_parent"
        android:layout_height="@dimen/EditText_Height"
        android:ems="10"
        android:hint="@string/Nombres"
        android:inputType="text"
        android:translationY="150dp" />

    <EditText
        android:id="@+id/edt_apellidos"
        android:layout_width="match_parent"
        android:layout_height="@dimen/EditText_Height"
        android:ems="10"
        android:hint="@string/Apellidos"
        android:inputType="text"
        android:translationY="150dp" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ButtonColor"
        android:onClick="siguiente"
        android:text="@string/Registro"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:translationY="150dp"
        app:cornerRadius="@dimen/Radius0" />

</LinearLayout>