<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/App"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Usuario_Height"
        android:translationY="@dimen/Usuario_Translation"
        app:srcCompat="@drawable/usuario" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Login"
        android:textSize="@dimen/TextSize"
        android:translationY="@dimen/TextTransaltion" />

    <EditText
        android:id="@+id/edt_email1"
        android:layout_width="match_parent"
        android:maxLength="100"
        android:layout_height="@dimen/EditText_Height"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:translationY="@dimen/EditText_Translation" />

    <EditText
        android:id="@+id/edt_pass1"
        android:layout_width="match_parent"
        android:maxLength="30"
        android:layout_height="@dimen/EditText_Height"
        android:ems="10"
        android:hint="@string/Contraseña"
        android:inputType="textPassword"
        android:translationY="@dimen/EditText_Translation" />

    <Button
        android:id="@+id/Iniciar_Sesionbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ButtonColor"
        android:onClick="Login"
        android:text="@string/Incio_Sesion"
        android:translationY="@dimen/ButtonTranslation"
        app:cornerRadius="@dimen/Radius0" />

    <Button
        android:id="@+id/Registrobtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ButtonColor"
        android:onClick="Registro"
        android:text="@string/Registro"
        android:translationY="@dimen/ButtonTranslation"
        app:cornerRadius="0dp" />

</LinearLayout>